Fixes issue #1345 : Improved readability for sub-heading

--- a/introSection.css
+++ b/introSection.css
@@ -62,6 +62,7 @@
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 3px;
+  color: white;
 }
 .main-body-heading-text span{
   color: #c97f06;
@@ -144,7 +145,7 @@
 
 .card-img-size {
   width: 330px;
-  height: 330px; 
+  height: 330px;
   object-fit: cover;
   object-position: 25% 75%;;
 }
